--- a/index.html
+++ b/index.html
@@ -2,107 +2,109 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Casa Mondego – Bolos Caseiros em Curitiba</title>
+<title>Casa Mondego – Bolos Artesanais</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 <style>
-body {
+body{
   margin:0;
-  font-family: 'Montserrat', sans-serif;
-  background:#fffaf5;
-  color:#4b2e1e;
+  font-family:Arial, Helvetica, sans-serif;
+  background:#000;
+  color:#fff;
 }
-header {
-  background: linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
-  url('https://images.unsplash.com/photo-1541976076758-347942db1974?auto=format&fit=crop&w=1500&q=80');
-  background-size:cover;
-  padding:90px 20px;
-  text-align:center;
-  color:white;
-}
-header h1 {
-  font-family:'Playfair Display', serif;
-  font-size:48px;
-}
-section {
+header{
+  border-bottom:2px solid #d4af37;
   padding:40px 20px;
-  max-width:1100px;
+  text-align:center;
+}
+header h1{
+  color:#d4af37;
+  letter-spacing:4px;
+  font-size:38px;
+  margin:0;
+}
+header p{
+  margin-top:10px;
+  font-size:15px;
+  color:#eee;
+}
+section{
+  padding:40px 20px;
+  max-width:900px;
   margin:auto;
   text-align:center;
 }
-.construction {
-  background:#f3e3d3;
+.construction{
+  border:2px dashed #d4af37;
   padding:25px;
   border-radius:10px;
-  margin-bottom:40px;
 }
-.gallery {
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
-}
-.gallery img {
-  width:100%;
-  border-radius:12px;
-  box-shadow:0 4px 10px rgba(0,0,0,.15);
-}
-footer {
-  background:#4b2e1e;
-  color:white;
-  padding:20px;
-  text-align:center;
-}
-.btn {
-  background:#c1793c;
-  color:white;
-  padding:14px 26px;
-  border-radius:30px;
-  text-decoration:none;
+.btn{
   display:inline-block;
-  margin-top:20px;
-}
-.social a{
-  margin:0 10px;
-  color:#4b2e1e;
-  font-weight:600;
+  margin-top:25px;
+  padding:14px 28px;
+  background:#d4af37;
+  color:#000;
   text-decoration:none;
+  font-weight:bold;
+  border-radius:6px;
 }
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+  gap:15px;
+  margin-top:35px;
+}
+.placeholder{
+  height:180px;
+  border:2px solid #d4af37;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:#d4af37;
+  font-size:14px;
+}
+footer{
+  border-top:2px solid #d4af37;
+  text-align:center;
+  padding:20px;
+  font-size:13px;
+  color:#ccc;
+}
+a{ color:#d4af37; text-decoration:none; }
 </style>
 </head>
-
 <body>
 
 <header>
-  <h1>Casa Mondego</h1>
-  <p>Bolos caseiros feitos com carinho em Curitiba</p>
+  <h1>CASA MONDEGO</h1>
+  <p>Bolos artesanais feitos diariamente</p>
 </header>
 
 <section>
   <div class="construction">
-    <h2>🚧 Estamos em construção!</h2>
-    <p>Em breve nosso cardápio digital estará disponível aqui.</p>
-    <p>Enquanto isso, fale com a gente pelo WhatsApp ou redes sociais.</p>
-    <a class="btn" href="https://wa.me/5541991755009" target="_blank">Falar no WhatsApp</a>
+    <h2>🚧 Site em construção</h2>
+    <p>Estamos preparando nosso cardápio digital.</p>
+    <p>Enquanto isso, faça seu pedido pelo WhatsApp:</p>
+    <a class="btn" href="https://wa.me/5541991755009" target="_blank">
+      41 99175-5009
+    </a>
   </div>
 
-  <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1605478031142-1e1b18fbe7c6?auto=format&fit=crop&w=800&q=80">
-    <img src="https://images.unsplash.com/photo-1603079843181-9c10bb7c0b0b?auto=format&fit=crop&w=800&q=80">
-    <img src="https://images.unsplash.com/photo-1589308078059-9186c0c23a78?auto=format&fit=crop&w=800&q=80">
-    <img src="https://images.unsplash.com/photo-1614707267537-1c52fdf7f8b2?auto=format&fit=crop&w=800&q=80">
-  </div>
-
-  <div class="social">
-    <p>
-      <a href="https://www.instagram.com/casa.mondego/" target="_blank">@casa.mondego</a> |
-      <a href="https://www.facebook.com/share/181w77kYzK/" target="_blank">Facebook</a>
-    </p>
+  <div class="grid">
+    <div class="placeholder">Foto do bolo seco</div>
+    <div class="placeholder">Foto do bolo seco</div>
+    <div class="placeholder">Foto do bolo seco</div>
+    <div class="placeholder">Foto do bolo seco</div>
   </div>
 </section>
 
 <footer>
-  <p>Casa Mondego – Bom Retiro, Curitiba</p>
-  <p>© 2026 – Todos os direitos reservados</p>
+  <p>Bom Retiro – Curitiba</p>
+  <p>
+    <a href="https://www.instagram.com/casa.mondego/" target="_blank">@casa.mondego</a> |
+    <a href="https://www.facebook.com/share/181w77kYzK/" target="_blank">Facebook</a>
+  </p>
+  <p>© 2026 Casa Mondego</p>
 </footer>
 
 </body>
