--- a/index.html
+++ b/index.html
@@ -5,72 +5,15 @@
 <title>Casa Mondego – Bolos Artesanais</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{
-  margin:0;
-  font-family:Arial, Helvetica, sans-serif;
-  background:#000;
-  color:#fff;
-}
-header{
-  border-bottom:2px solid #d4af37;
-  padding:40px 20px;
-  text-align:center;
-}
-header h1{
-  color:#d4af37;
-  letter-spacing:4px;
-  font-size:38px;
-  margin:0;
-}
-header p{
-  margin-top:10px;
-  font-size:15px;
-  color:#eee;
-}
-section{
-  padding:40px 20px;
-  max-width:900px;
-  margin:auto;
-  text-align:center;
-}
-.construction{
-  border:2px dashed #d4af37;
-  padding:25px;
-  border-radius:10px;
-}
-.btn{
-  display:inline-block;
-  margin-top:25px;
-  padding:14px 28px;
-  background:#d4af37;
-  color:#000;
-  text-decoration:none;
-  font-weight:bold;
-  border-radius:6px;
-}
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
-  gap:15px;
-  margin-top:35px;
-}
-.placeholder{
-  height:180px;
-  border:2px solid #d4af37;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  color:#d4af37;
-  font-size:14px;
-}
-footer{
-  border-top:2px solid #d4af37;
-  text-align:center;
-  padding:20px;
-  font-size:13px;
-  color:#ccc;
-}
-a{ color:#d4af37; text-decoration:none; }
+body{margin:0;font-family:Arial;background:#000;color:#fff}
+header{border-bottom:2px solid #d4af37;padding:40px 20px;text-align:center}
+header h1{color:#d4af37;letter-spacing:4px;font-size:38px;margin:0}
+section{padding:40px 20px;max-width:1000px;margin:auto;text-align:center}
+.btn{display:inline-block;margin-top:25px;padding:14px 28px;background:#d4af37;color:#000;text-decoration:none;font-weight:bold;border-radius:6px}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px;margin-top:35px}
+.grid img{width:100%;border:2px solid #d4af37;border-radius:8px}
+footer{border-top:2px solid #d4af37;text-align:center;padding:20px;font-size:13px;color:#ccc}
+a{color:#d4af37;text-decoration:none}
 </style>
 </head>
 <body>
@@ -81,20 +24,15 @@ a{ color:#d4af37; text-decoration:none; }
 </header>
 
 <section>
-  <div class="construction">
-    <h2>🚧 Site em construção</h2>
-    <p>Estamos preparando nosso cardápio digital.</p>
-    <p>Enquanto isso, faça seu pedido pelo WhatsApp:</p>
-    <a class="btn" href="https://wa.me/5541991755009" target="_blank">
-      41 99175-5009
-    </a>
-  </div>
+  <h2>🚧 Estamos em construção</h2>
+  <p>Nosso cardápio digital está sendo preparado.</p>
+  <a class="btn" href="https://wa.me/5541991755009" target="_blank">Falar no WhatsApp</a>
 
   <div class="grid">
-    <div class="placeholder">Foto do bolo seco</div>
-    <div class="placeholder">Foto do bolo seco</div>
-    <div class="placeholder">Foto do bolo seco</div>
-    <div class="placeholder">Foto do bolo seco</div>
+    <img src="https://images.unsplash.com/photo-1605478031142-1e1b18fbe7c6?auto=format&fit=crop&w=800&q=80">
+    <img src="https://images.unsplash.com/photo-1589308078059-9186c0c23a78?auto=format&fit=crop&w=800&q=80">
+    <img src="https://images.unsplash.com/photo-1541976076758-347942db1974?auto=format&fit=crop&w=800&q=80">
+    <img src="https://images.unsplash.com/photo-1614707267537-1c52fdf7f8b2?auto=format&fit=crop&w=800&q=80">
   </div>
 </section>
 
