--- a/index.html
+++ b/index.html
@@ -126,13 +126,27 @@
       margin: 2rem 0;
     }
 
+    .endereco p {
+      margin: 1rem 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
+    }
+
+    .endereco svg {
+      width: 28px;
+      height: 28px;
+      fill: var(--dourado);
+      flex-shrink: 0;
+    }
+
     .mapa {
       border-radius: 12px;
       overflow: hidden;
       box-shadow: 0 8px 25px rgba(0,0,0,0.1);
     }
 
-    /* Botão WhatsApp flutuante - versão clean */
     .whatsapp-float {
       position: fixed;
       bottom: 25px;
@@ -174,6 +188,7 @@
       h2 { font-size: 2.4rem; }
       .whatsapp-float { width: 60px; height: 60px; bottom: 20px; right: 20px; }
       .whatsapp-float svg { width: 36px; height: 36px; }
+      .endereco svg { width: 24px; height: 24px; }
     }
   </style>
 </head>
@@ -185,7 +200,7 @@
   </div>
 
   <header>
-    <!-- Logo removido temporariamente conforme solicitado -->
+    <!-- Logo removido temporariamente -->
   </header>
 
   <section class="hero">
@@ -229,10 +244,22 @@
   <section class="container">
     <h2>Onde nos Encontrar</h2>
     <div class="endereco">
-      <p><strong>Rua Desembargador Hugo Simas, 1480 - Loja 5</strong><br>
-      Bairro Bom Retiro — Curitiba/PR<br>
-      <strong>WhatsApp / Telefone:</strong> (41) 99175-5009<br>
-      <strong>Horário:</strong> Segunda a Sábado, 10h às 18h</p>
+      <p>
+        <svg viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
+        Rua Desembargador Hugo Simas, 1480 - Loja 5<br>Bairro Bom Retiro — Curitiba/PR
+      </p>
+      <p>
+        <svg viewBox="0 0 24 24"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.24 1.02l-2.2 2.2z"/></svg>
+        WhatsApp / Telefone: (41) 99175-5009
+      </p>
+      <p>
+        <svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.228.228 2.695.072 7.053.014 8.333 0 8.741 0 12s.014 3.667.072 4.947c.156 4.358 2.623 6.825 6.981 6.981C8.333 23.986 8.741 24 12 24s3.667-.014 4.947-.072c4.358-.156 6.825-2.623 6.981-6.981.058-1.28.072-1.688.072-4.947s-.014-3.667-.072-4.947c-.156-4.358-2.623-6.825-6.981-6.981C15.667.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z"/></svg>
+        Instagram: @casa.mondego
+      </p>
+      <p>
+        <svg viewBox="0 0 24 24"><path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"/></svg>
+        Facebook
+      </p>
     </div>
 
     <div class="mapa">
@@ -248,7 +275,7 @@
     </div>
   </section>
 
-  <!-- Botão WhatsApp Flutuante - ícone clean -->
+  <!-- Botão WhatsApp Flutuante -->
   <a href="https://wa.me/5541991755009?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20os%20bolos%20da%20Casa%20Mondego!" class="whatsapp-float" target="_blank">
     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path fill="currentColor" d="M12.004 2c-5.523 0-10 4.477-10 10 0 1.989.58 3.843 1.58 5.396L2 22l4.604-1.58C8.157 21.42 10.015 22 12.004 22c5.523 0 10-4.477 10-10s-4.477-10-10-10zm4.996 14.82c-.197.557-.973.999-1.368 1.04-.367.038-.832.082-1.334.096-.502-.014-1.082-.228-1.711-.395-.667-.195-1.317-.389-1.893-.389-.785 0-1.409.154-1.929.454-.514.3-.838.713-.998 1.146-.16.433-.081 1.002.182 1.629.264.629.799 1.239 1.601 1.702.696.399 1.55.643 2.596.643 1.032 0 2.3-.279 3.128-.54.817-.258 1.543-.589 1.995-.955.45-.363.786-.794.982-1.232.195-.438.271-.98.202-1.573-.072-.596-.38-1.209-1.017-1.636z"/>
