--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 <meta name="theme-color" content="#000000"/> 
 <link rel="profile" href="https://gmpg.org/xfn/11" />
+<link rel="icon" type="image/png" href="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/yVbBnqOJqAAiOvEJ.png" sizes="96x96">
 <title>Casa Mondego - Bolos Caseiros feitos à mão, como antigamente !!</title>
-<meta name="description" content="Casa Mondego, tem receitas de família, e atendem a região norte de Curitiba." />
+<meta name="description" content="Casa Mondego, tem receitas de família, e atendem a região de Curitiba." />
 <link rel="canonical" href="https://www.casamondego.com.br/" />
 
 <style id='casa-mondego-custom-css' type='text/css'>
@@ -20,6 +21,7 @@
         --cream-bg: #fdfaf5;
         --text-dark: #333333;
         --text-light: #ffffff;
+        --whatsapp-green: #25D366;
     }
 
     body {
@@ -35,7 +37,7 @@
     header.header-bar {
         background-color: var(--black-bg) !important;
         border-bottom: 2px solid var(--gold-primary);
-        padding: 40px 0;
+        padding: 10px 0; /* Reduzido ao limite conforme solicitado */
     }
 
     .branding {
@@ -46,20 +48,20 @@
     }
 
     .logo-img {
-        max-width: 280px;
+        max-width: 365px;
         height: auto;
-        margin-bottom: 15px;
+        display: block;
         transition: transform 0.3s ease;
     }
 
     .logo-img:hover {
-        transform: scale(1.05);
+        transform: scale(1.02);
     }
 
     /* Navegação */
     .navigation-holder {
         background-color: var(--black-accent);
-        padding: 15px 0;
+        padding: 12px 0;
         position: sticky;
         top: 0;
         z-index: 1000;
@@ -78,10 +80,10 @@
     .main-nav li a {
         color: var(--gold-primary) !important;
         text-decoration: none;
-        padding: 10px 25px;
+        padding: 8px 20px;
         font-weight: 600;
-        letter-spacing: 1.5px;
-        font-size: 0.9rem;
+        letter-spacing: 1.2px;
+        font-size: 0.85rem;
         transition: all 0.3s ease;
     }
 
@@ -232,7 +234,7 @@
     footer {
         background-color: var(--black-bg);
         color: #888;
-        padding: 80px 20px;
+        padding: 80px 20px 40px;
         text-align: center;
         border-top: 3px solid var(--gold-primary);
     }
@@ -267,29 +269,37 @@
         color: var(--gold-primary);
     }
 
+    .map-container {
+        width: 100%;
+        height: 200px;
+        margin-top: 15px;
+        border-radius: 10px;
+        overflow: hidden;
+        border: 1px solid #333;
+    }
+
     .social-icons {
         display: flex;
-        gap: 20px;
-        margin-top: 10px;
+        gap: 15px;
+        margin-top: 15px;
+        align-items: center;
     }
 
     .social-icons a {
-        background: #222;
+        display: block;
         width: 40px;
         height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 50%;
-        color: var(--gold-primary);
-        font-size: 1.2rem;
-        transition: all 0.3s ease;
+        transition: transform 0.3s ease;
     }
 
     .social-icons a:hover {
-        background: var(--gold-primary);
-        color: var(--black-bg);
         transform: translateY(-5px);
+    }
+
+    .social-icons img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 
     .footer-bottom {
@@ -301,7 +311,7 @@
 
     @media (max-width: 768px) {
         .hero-section h1 { font-size: 2.5rem; }
-        .logo-img { max-width: 200px; }
+        .logo-img { max-width: 260px; }
         .main-nav { flex-direction: column; }
         .footer-grid { text-align: center; }
         .social-icons { justify-content: center; }
@@ -318,7 +328,6 @@
         <a href="https://www.casamondego.com.br/">
             <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/nFppfSJCWhOsztEB.png" alt="Casa Mondego Logo" class="logo-img">
         </a>
-        <div style="color: var(--gold-primary); font-family: 'Courgette'; font-size: 1.4rem; margin-top: 10px;">Bolos caseiros feitos à mão!</div>
     </div>
 </header>
 
@@ -329,7 +338,7 @@
             <li><a href="#historia">NOSSA HISTÓRIA</a></li>
             <li><a href="#bolos">NOSSOS BOLOS</a></li>
             <li><a href="#contato">CONTATO</a></li>
-            <li><a href="#">SEJA UM FRANQUEADO</a></li>
+            <li><a href="https://wa.me/5541991755009?text=Olá! Tenho interesse em saber mais sobre como ser um franqueado da Casa Mondego." target="_blank">SEJA UM FRANQUEADO</a></li>
         </ul>
     </nav>
 </div>
@@ -437,15 +446,27 @@
             <p>Rua Desembargador Hugo Simas, 1480</p>
             <p>Loja 5 - Bom Retiro</p>
             <p>Curitiba - PR | CEP 80520-708</p>
+            <div class="map-container">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.843647164848!2d-49.2848888!3d-25.4100000!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce43e7e7e7e7e%3A0x7e7e7e7e7e7e7e7e!2sR.%20Des.%20Hugo%20Simas%2C%201480%20-%20Bom%20Retiro%2C%20Curitiba%20-%20PR%2C%2080520-708!5e0!3m2!1spt-BR!2sbr!4v1700000000000!5m2!1spt-BR!2sbr" 
+                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
         </div>
         <div class="footer-section">
             <h4>Fale Conosco</h4>
             <a href="https://wa.me/5541991755009" target="_blank">WhatsApp: (41) 99175-5009</a>
             <p>E-mail: contato@casamondego.com.br</p>
             <div class="social-icons">
-                <a href="https://www.instagram.com/casa.mondego/" target="_blank" title="Instagram">IG</a>
-                <a href="https://www.facebook.com/share/17fN9UakoA/" target="_blank" title="Facebook">FB</a>
-                <a href="https://wa.me/5541991755009" target="_blank" title="WhatsApp">WA</a>
+                <a href="https://www.instagram.com/casa.mondego/" target="_blank" title="Instagram">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/132px-Instagram_logo_2016.svg.png" alt="Instagram">
+                </a>
+                <a href="https://www.facebook.com/share/17fN9UakoA/" target="_blank" title="Facebook">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1200px-Facebook_Logo_%282019%29.png" alt="Facebook">
+                </a>
+                <a href="https://wa.me/5541991755009" target="_blank" title="WhatsApp">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1200px-WhatsApp.svg.png" alt="WhatsApp">
+                </a>
             </div>
         </div>
     </div>
